--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,5 @@ serde = "1"
 serde_view_macros = { version = "0.1", path = "serde_view_macros" }
 
 [dev-dependencies]
-serde = { version = "*", features = ["derive"] }
+serde = { version = "1", features = ["derive"] }
 serde_json = "1"
